Added test plot

--- a/testing_r_markdown.Rmd
+++ b/testing_r_markdown.Rmd
@@ -5,26 +5,13 @@ date: "2024-03-06"
 output: github_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+This is the first sentence of the document. 
+
+```{r}
+require(ggplot2)
+years <- c( 0,  5, 12, 13, 15, 16, 16, 19, 21)
+carbon <- runif(9, min = 0, max = 4)
+data <- data.frame(years, carbon)
+ggplot(data, aes(x = years, y = carbon))+theme_bw()+geom_point()
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
