Knit test plot to md.

--- a/testing_r_markdown.Rmd
+++ b/testing_r_markdown.Rmd
@@ -5,7 +5,7 @@ date: "2024-03-06"
 output: github_document
 ---
 
-This is the first sentence of the document. 
+This is the first sentence of the document. Below is a test plot with made up data. 
 
 ```{r}
 require(ggplot2)
